Add copyright headers and LICENSE

--- a/template-launcher.conf
+++ b/template-launcher.conf
@@ -1,3 +1,4 @@
+# Copyright 2019 Streamsets Inc.
 # To change StreamSets Agent logs directory from default directory <EDGE DIST>/log/ to another directory
 #log-dir = "/var/sdce/log"
 
