Add new access control headers

--- a/template-launcher.conf
+++ b/template-launcher.conf
@@ -25,7 +25,7 @@ base-http-url = ""
 
 [http.headers]
 Access-Control-Allow-Origin = "*"
-Access-Control-Allow-Headers = "origin, content-type, accept, authorization, x-requested-by, x-ss-user-auth-token, x-ss-rest-call"
+Access-Control-Allow-Headers = "origin, runId, runType, content-type, accept, authorization, x-requested-by, x-ss-user-auth-token, x-ss-rest-call"
 Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS, HEAD"
 
 ###
