--- a/yaml/template-streamsets-agent.yaml
+++ b/yaml/template-streamsets-agent.yaml
@@ -95,7 +95,7 @@ spec:
        - name: dockercred
       containers:
         - name: launcher
-          image: streamsets/launcher:1.0.0-beta
+          image: streamsets/launcher:1.0.0-beta01
           volumeMounts:
             - name: launcher-conf
               mountPath: /opt/streamsets/launcher/etc/launcher.conf
