Fix the agent scripts to use path to mount for directories

--- a/template-launcher.conf
+++ b/template-launcher.conf
@@ -67,6 +67,8 @@ default-extra-lib = ""
 
 default-pvc-to-mount = ""
 
+default-pvc-path-to-mount = ""
+
 # Fetcher Address
 fetcher-address = "fetcher.default.svc.cluster.local:9090"
 
