Add tag app=launcher, fix until loop to check for nonempty command output instead of command exit status

--- a/yaml/template-streamsets-agent.yaml
+++ b/yaml/template-streamsets-agent.yaml
@@ -84,6 +84,7 @@ spec:
     metadata:
       labels:
         name: launcher
+        app: launcher
     spec:
       volumes:
         - name: launcher-conf
